--- a/challenge_3/challenge_3b/style.css
+++ b/challenge_3/challenge_3b/style.css
@@ -12,4 +12,11 @@ div {
 	width: 1250px;
 	height: 400px;
 	border: 5px solid black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+body {
+	align-items: center;
 }
